--- a/package.json
+++ b/package.json
@@ -20,5 +20,5 @@
     "url": "https://github.com/shreya2415/NAMASTE_REACT/issues"
 
   },
-  "homepage": "ttps://github.com/shreya2415/NAMASTE_REACT#readme"
+  "homepage": "https://github.com/shreya2415/NAMASTE_REACT#readme"
 }
